--- a/index.html
+++ b/index.html
@@ -18,21 +18,42 @@
                 </div>
             </div>
             <img id="kaka" src="Cookie.png" alt="Bild på kaka.">
+            <div id="CPS-progress-frame">
+                <div id="CPS-progress"></div>
+            </div>
         </div>
 
         <div id="rightside">
             <div id="store">
-                <div class="purchasable_item" onClick="powerup_clicked(this)">
-                    <h3>Grandma</h3>
-                    <p>She bakes</p>
+                <div class="purchasable_item" onClick="powerup_clicked(this, 10, 1)">
+                    <div>
+                        <h2>Grandma</h2>
+                        <h3>She bakes ...a lot</h3>
+                    </div>
+                    <div>
+                        <h1>10C</h1>
+                        <h2>50C/S</h2>
+                    </div>
                 </div>
-                <div class="purchasable_item" onClick="powerup_clicked(this)">
-                    <h3>Nuclear Reactor</h3>
-                    <p>It spits out toxic cookies</p>
+                <div class="purchasable_item" onClick="powerup_clicked(this, 50, 5)">
+                    <div>
+                        <h2>Nuclear Reactor</h2>
+                        <h3>It spits out toxic cookies</h3>
+                    </div>
+                    <div>
+                        <h1>50C</h1>
+                        <h2>5C/S</h2>
+                    </div>
                 </div>
-                <div class="purchasable_item" onClick="powerup_clicked(this)">
-                    <h3>Erika</h3>
-                    <p>She has 100+ hours in Cookie Clicker</p>
+                <div class="purchasable_item" onClick="powerup_clicked(this, 2000, 50)">
+                    <div>
+                        <h2>Erika</h2>
+                        <h3>She has 100+ hours in Cookie Clicker</h3>
+                    </div>
+                    <div>
+                        <h1>2000C</h1>
+                        <h2>50C/S</h2>
+                    </div>
                 </div>
             </div>
         </div>
