Fixat bättre pristaggar

--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
                         <h2>Grandma</h2>
                         <h3>She bakes ...a lot</h3>
                     </div>
-                    <div>
-                        <h1>10C</h1>
-                        <h2>50C/S</h2>
+                    <div class="price">
+                        <h2>10C</h2>
+                        <h3>50C/S</h3>
                     </div>
                 </div>
-                <div class="purchasable_item" onClick="powerup_clicked(this, 50, 5)">
+                <div class="purchasable_item" onClick="powerup_clicked(this, 30, 5)">
                     <div>
                         <h2>Nuclear Reactor</h2>
                         <h3>It spits out toxic cookies</h3>
                     </div>
-                    <div>
-                        <h1>50C</h1>
-                        <h2>5C/S</h2>
+                    <div class="price">
+                        <h2>30C</h2>
+                        <h3>5C/S</h3>
                     </div>
                 </div>
-                <div class="purchasable_item" onClick="powerup_clicked(this, 2000, 50)">
+                <div class="purchasable_item" onClick="powerup_clicked(this, 100, 20)">
                     <div>
                         <h2>Erika</h2>
                         <h3>She has 100+ hours in Cookie Clicker</h3>
                     </div>
-                    <div>
-                        <h1>2000C</h1>
-                        <h2>50C/S</h2>
+                    <div class="price">
+                        <h2>100C</h2>
+                        <h3>20C/S</h3>
                     </div>
                 </div>
             </div>
