Webbsidan skalas bättre på mindre enheter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                     <h3>Cookies:</h3>
                     <p id="cookie_amount">0</p>
                 </div>
+                <div>
+                    <h3>Cookies/Second:</h3>
+                    <p>0</p>
+                </div>
             </div>
             <img id="kaka" src="Cookie.png" alt="Bild på kaka.">
             <div id="CPS-progress-frame" class="black_background">
