--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div>
                     <h3>Cookies/Second:</h3>
-                    <p>0</p>
+                    <p id="CPS_rate">0</p>
                 </div>
             </div>
             <img id="kaka" src="Cookie.png" alt="Bild på kaka.">
