Added Axel powerup template

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
 
             <div id="powerups" class="black_background">
                 <img src="Assets/powerups/Elliot.webp" alt="Powerup logo: Elliot" class="powerup" onmousemove="hover_powerup(this, 'Elliot', 'Increases Erikas speed by 200%.')" onmouseleave="hide_info()">
+                <img src="Assets/powerups/Axel.webp" alt="Powerup logo: Axel" class="powerup" onmousemove="hover_powerup(this, 'Axel', 'Bullies Saga to produce 100% negative cookies. (-100% of Sagas CPS)')" onmouseleave="hide_info()">
                 
                 <div id="powerup_information_hoverview">
-                    <img src="Assets/powerups/Elliot.webp" style="display: block;">
+                    <img style="display: block;">
                     <div style="display: block;">
-                        <h4>hej</h4>
-                        <p>hej</p>
+                        <h4>Titel</h4>
+                        <p>Beskrivning</p>
                     </div>
                 </div>
             </div>
