Lade till ett barn.

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
 
 
             <div id="powerups" class="black_background">
-                <img src="Assets/powerups/Elliot.webp" alt="Powerup logo: Elliot" class="powerup" onmousemove="hover_powerup(this, 'Elliot', 'Increases Erikas speed by 200%.')" onmouseleave="hide_info()" onclick="activate_powerup(this, 'Elliot')">
-                <img src="Assets/powerups/Axel.webp" alt="Powerup logo: Axel" class="powerup" onmousemove="hover_powerup(this, 'Axel', 'Bullies Saga to produce 50% less cookies.')" onmouseleave="hide_info()" onclick="activate_powerup(this, 'Axel')">
+                <img src="Assets/powerups/Elliot.webp" alt="Powerup logo: Elliot" class="powerup" onmousemove="hover_powerup(this, 'Elliot', 'Increases Erikas speed by 200%.', 1500)" onmouseleave="hide_info()" onclick="activate_powerup(this, 'Elliot')">
+                <img src="Assets/powerups/Axel.webp" alt="Powerup logo: Axel" class="powerup" onmousemove="hover_powerup(this, 'Axel', 'Bullies Saga to produce 50% less cookies.', null)" onmouseleave="hide_info()" onclick="activate_powerup(this, 'Axel')">
+                <img src="Assets/powerups/Barn.webp" alt="Powerup logo: Barn" class="powerup" onmousemove="hover_powerup(this, 'Barn', 'Give Sebastian more students to increase speed by 200%.', 3000)" onmouseleave="hide_info()" onclick="activate_powerup(this, 'Barn')">
                 
                 <div id="powerup_information_hoverview">
                     <img style="display: block;">
