added cookie icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Cookie Clicker</title>
     <link rel="stylesheet" href="style.css">
     <script src="cookie.js" defer></script>
+    <link rel="icon" href="Cookie.png">
 </head>
 <body>
     <div id="page">
